--- a/app/src/main/res/drawable/ic_medprofile_avatar.xml
+++ b/app/src/main/res/drawable/ic_medprofile_avatar.xml
@@ -1,5 +1,24 @@
-<vector android:height="369dp" android:viewportHeight="369.2"
-    android:viewportWidth="392.3" android:width="392dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#C8C8C8" android:pathData="M0,194.2c0,-7.7 0,-15.3 0,-23c0.6,-3.3 1.4,-6.5 1.8,-9.8C8,112.5 30.2,72.3 68.2,41.1c34.8,-28.5 74.9,-42 120.2,-41.1c47.8,0.9 89,17.8 123.1,50.6c42,40.3 60.7,90.5 56.4,148.5c-3.8,50.4 -25.8,92.2 -64.1,125.1c-28.3,24.4 -61.4,38.2 -98.5,42.7c-2.2,0.3 -4.3,1.5 -6.4,2.2c-10,0 -20,0 -30,0c-3.3,-1 -6.5,-2.4 -9.8,-2.8c-18.8,-2.6 -37,-7.6 -53.9,-16.2C46,320.3 11.3,272.5 1.9,206.5C1.3,202.4 0.6,198.3 0,194.2zM186.4,364.3c3.8,-0.3 8.3,-0.6 12.8,-1c55.4,-5.4 99.6,-30.4 132.6,-75.3c3.6,-4.9 3.4,-5.7 -2.2,-7.8c-12.2,-4.5 -24.5,-8.6 -36.6,-13.3c-17,-6.7 -33.9,-13.9 -50.9,-20.7c-4.6,-1.8 -6.6,-5 -5.9,-9.7c1.6,-11.2 3.4,-22.3 5.3,-33.5c0.2,-1.1 2.1,-2.7 3.3,-2.7c8.5,0 10.9,-1.7 13.9,-9.6c3.1,-7.9 6.7,-15.6 9.9,-23.5c1.2,-3 2.4,-6.4 2.2,-9.6c-0.2,-2.8 -1.6,-7.1 -3.6,-8c-5.4,-2.4 -5.8,-5.4 -3.8,-10.1c0.6,-1.3 0.7,-2.9 0.9,-4.4c0.9,-8.4 3.7,-16 7,-23.8c2.6,-6.3 4,-14.1 3.1,-20.9c-3.8,-28.3 -21.1,-47.5 -44.7,-61.6c-12.2,-7.3 -25.4,-10.5 -39.8,-8c-4,0.7 -8.4,0.4 -12.4,-0.2c-8.5,-1.2 -16.6,-0.5 -24.6,2.3c-23.4,8.1 -40.3,23.9 -51.6,45.5c-8.2,15.8 -10.5,32.2 -0.8,48.7c1.7,2.9 2.4,6.6 3.2,10c1.3,5.5 2.5,11.1 3.3,16.6c0.2,1.2 -0.7,3.2 -1.7,3.9c-7.2,4.5 -9,10.1 -5.6,18c3.9,9.2 7.9,18.3 11.8,27.5c2.4,5.6 6.2,7.7 12.2,7.3c1.4,-0.1 3.9,1.4 4.1,2.6c2,10.8 3.8,21.6 5.3,32.5c0.8,5.2 -1.6,8.8 -6.7,10.9c-13.7,5.6 -27.2,11.7 -41,17.1c-15.1,5.8 -30.4,11.1 -45.6,16.6c-3.8,1.4 -4.7,3.4 -2.2,6.7c0.7,0.9 1.3,1.9 2,2.9C75.9,338.7 125.2,362.4 186.4,364.3z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M186.4,364.3c-61.2,-1.9 -110.5,-25.6 -147,-74.6c-0.7,-0.9 -1.3,-2 -2,-2.9c-2.6,-3.3 -1.6,-5.3 2.2,-6.7c15.2,-5.4 30.5,-10.7 45.6,-16.6c13.8,-5.4 27.3,-11.5 41,-17.1c5.1,-2.1 7.4,-5.7 6.7,-10.9c-1.6,-10.9 -3.3,-21.7 -5.3,-32.5c-0.2,-1.1 -2.7,-2.6 -4.1,-2.6c-5.9,0.4 -9.8,-1.7 -12.2,-7.3c-3.9,-9.2 -7.9,-18.3 -11.8,-27.5c-3.4,-8 -1.6,-13.5 5.6,-18c1,-0.6 1.9,-2.7 1.7,-3.9c-0.9,-5.6 -2,-11.1 -3.3,-16.6c-0.8,-3.4 -1.5,-7 -3.2,-10c-9.7,-16.5 -7.4,-32.9 0.8,-48.7c11.3,-21.6 28.2,-37.4 51.6,-45.5c8,-2.8 16.2,-3.5 24.6,-2.3c4.1,0.6 8.4,0.9 12.4,0.2c14.4,-2.5 27.6,0.7 39.8,8c23.7,14.1 40.9,33.3 44.7,61.6c0.9,6.8 -0.5,14.5 -3.1,20.9c-3.3,7.8 -6.1,15.4 -7,23.8c-0.2,1.5 -0.3,3.1 -0.9,4.4c-2,4.7 -1.6,7.7 3.8,10.1c2.1,0.9 3.4,5.2 3.6,8c0.2,3.1 -1,6.5 -2.2,9.6c-3.1,7.9 -6.8,15.5 -9.9,23.5c-3,7.9 -5.4,9.6 -13.9,9.6c-1.1,0 -3.1,1.6 -3.3,2.7c-2,11.1 -3.7,22.3 -5.3,33.5c-0.7,4.7 1.3,7.9 5.9,9.7c17,6.8 33.8,14 50.9,20.7c12.1,4.7 24.4,8.8 36.6,13.3c5.6,2.1 5.8,2.9 2.2,7.8c-33,44.9 -77.2,69.9 -132.6,75.3C194.7,363.7 190.2,364 186.4,364.3z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="100dp"
+    android:height="100dp"
+    android:viewportWidth="100"
+    android:viewportHeight="100">
+  <path
+      android:pathData="M50,50m-50,0a50,50 0,1 1,100 0a50,50 0,1 1,-100 0"
+      android:fillColor="#F5EEE5"/>
+  <group>
+    <clip-path android:pathData="M50,50m-50,0a50,50 0,1 1,100 0a50,50 0,1 1,-100 0 M 0,0"/>
+    <path
+        android:pathData="M63,71.9c0,4 4.7,5.2 7.1,5.8c7.6,2 22.8,5.9 22.8,5.9c3.2,1.1 5.7,3.5 7.1,6.6v9.8L0,100v-9.8c1.3,-3.1 3.9,-5.5 7.1,-6.6c0,0 15.2,-3.9 22.8,-5.9c2.4,-0.6 7.1,-1.8 7.1,-5.8c0,-4 0,-10.9 0,-10.9h26C63,61 63,67.9 63,71.9z"
+        android:fillColor="#E6C19C"/>
+    <group>
+      <clip-path android:pathData="M63,71.9c0,4 4.7,5.2 7.1,5.8c7.6,2 22.8,5.9 22.8,5.9c3.2,1.1 5.7,3.5 7.1,6.6v9.8L0,100v-9.8c1.3,-3.1 3.9,-5.5 7.1,-6.6c0,0 15.2,-3.9 22.8,-5.9c2.4,-0.6 7.1,-1.8 7.1,-5.8c0,-4 0,-10.9 0,-10.9h26C63,61 63,67.9 63,71.9z M 0,0"/>
+      <path
+          android:pathData="M50.2,11c0.1,0 0.1,0 0.2,0c0,0 0,0 0,0c3.3,0 8.2,0.2 11.4,2c3.3,1.9 7.3,5.6 8.5,12.1c2.4,13.7 -2.1,35.4 -6.3,42.4c-4,6.7 -9.8,9.2 -13.5,9.4c0,0 -0.1,0 -0.1,0c-0.1,0 -0.1,0 -0.2,0c-0.1,0 -0.1,0 -0.2,0c0,0 -0.1,0 -0.1,0c-3.7,-0.2 -9.5,-2.7 -13.5,-9.4c-4.2,-7 -8.7,-28.7 -6.3,-42.4c1.2,-6.5 5.2,-10.2 8.5,-12.1c3.2,-1.8 8.1,-2 11.4,-2c0,0 0,0 0,0C50.1,11 50.1,11 50.2,11L50.2,11z"
+          android:fillColor="#D4B08C"/>
+    </group>
+  </group>
+  <path
+      android:pathData="M49.6,16c19.1,0 20.7,13.8 20.8,15.1c1.1,11.9 -3,28.1 -6.8,33.7c-4,5.9 -9.8,8.1 -13.5,8.3c-0.2,0 -0.2,0 -0.3,0c-0.1,0 -0.1,0 -0.2,0C45.8,72.8 40,70.6 36,64.7c-3.8,-5.6 -7.9,-21.8 -6.8,-33.8C29.3,29.7 30.5,16 49.6,16z"
+      android:fillColor="#F2CEA5"/>
 </vector>
