--- a/app/src/main/res/layout/activity_profile_med.xml
+++ b/app/src/main/res/layout/activity_profile_med.xml
@@ -7,12 +7,12 @@
     android:background="@android:color/darker_gray">
 
     <ImageView
-        android:id="@+id/avatar"
+        android:id="@+id/medProfileAvatar"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintBottom_toTopOf="@+id/medProfileWhitePanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.578"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/ic_medprofile_avatar" />
 
     <ImageView
-        android:id="@+id/favourite"
+        android:id="@+id/medProfileFavoriteButton"
         android:layout_width="46dp"
         android:layout_height="36dp"
         android:layout_marginTop="16dp"
@@ -30,7 +30,7 @@
         app:srcCompat="@drawable/ic_med_profile_heart" />
 
     <ImageView
-        android:id="@+id/back"
+        android:id="@+id/medProfileBackButton"
         android:layout_width="44dp"
         android:layout_height="28dp"
         android:layout_marginStart="8dp"
@@ -40,7 +40,7 @@
         app:srcCompat="@drawable/ic_medprofile_back_button" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/medProfileWhitePanel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
@@ -49,15 +49,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_medprofile_white_panel" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:srcCompat="@drawable/l_1_11"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout2"
@@ -68,23 +59,22 @@
         tools:layout_editor_absoluteX="31dp">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/medProfileAbout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:fontFamily="@font/montserrat"
-            android:text="@string/tempLongString"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintStart_toStartOf="@+id/medProfileAboutHeader"
+            app:layout_constraintTop_toBottomOf="@+id/medProfileAboutHeader"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/medProfileAboutHeader"
             android:layout_width="wrap_content"
             android:layout_height="28dp"
             android:layout_marginStart="8dp"
@@ -97,7 +87,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.06"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textcategory" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -106,37 +96,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/medProfileWhitePanel"
         tools:layout_editor_absoluteX="0dp">
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/medProfileName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="28dp"
             android:layout_marginEnd="8dp"
-            android:text="Ramin Ahmad"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.065"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView2" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textcategory"
+            android:id="@+id/medProfileCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/montserrat"
-            android:text="Proctologist"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/name"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
+            app:layout_constraintStart_toStartOf="@+id/medProfileName"
+            app:layout_constraintTop_toBottomOf="@+id/medProfileName" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -150,7 +137,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/medProfileCommentsHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
