--- a/app/src/main/res/drawable/ic_launcher_list.xml
+++ b/app/src/main/res/drawable/ic_launcher_list.xml
@@ -3,11 +3,11 @@
     android:height="108dp"
     android:viewportWidth="41.37931"
     android:viewportHeight="41.37931"
-    android:tint="#000000">
+    android:fillColor="@color/white">
   <group android:translateX="8.689655"
       android:translateY="8.689655">
       <path
-          android:fillColor="#FF000000"
+          android:fillColor="@color/white"
           android:pathData="M4,14h4v-4L4,10v4zM4,19h4v-4L4,15v4zM4,9h4L8,5L4,5v4zM9,14h12v-4L9,10v4zM9,19h12v-4L9,15v4zM9,5v4h12L21,5L9,5z"/>
   </group>
 </vector>
