--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,25 +3,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view"
     tools:context=".Activities.MainActivity" >
 
-
+<group android:checkableBehavior="single">
     <item
         android:id="@+id/List"
-        android:enabled="true"
-        android:icon="@drawable/ic_mr_button_connecting_21_light"
+        android:icon="@drawable/ic_list"
         android:title="Medics list" />
-    <item android:id="@+id/Profile" android:title="My profile" android:icon="@drawable/map"/>
-    <item android:id="@+id/favourites" android:title="My favourites" android:icon="@drawable/ic_launcher_favourites"/>
-    <item android:id="@+id/premium" android:title="Buy premium" android:icon="@drawable/ic_settings"/>
-    <item android:id="@+id/map" android:title="Map" android:icon="@drawable/map"/>
+    <item android:id="@+id/Profile" android:title="My profile" android:icon="@drawable/ic_profile"/>
+    <item android:id="@+id/favourites" android:title="My favourites" android:icon="@drawable/ic_star"/>
+    <item android:id="@+id/premium" android:title="Buy premium" android:icon="@drawable/ic_premium"/>
+    <item android:id="@+id/map" android:title="Map" android:icon="@drawable/ic_placeholder"/>
     <item android:id="@+id/settings" android:title="Settings" android:icon="@drawable/ic_settings"/>
+</group>
 
-
-
-
-
-    <item android:id="@+id/signIn" android:title="Sign in"/>
+    <item android:id="@+id/signIn" android:title="Sign in" android:icon="@drawable/ic_log_in"/>
 
 
 </menu>
