--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -158,7 +158,7 @@
                 android:ems="10"
                 android:fontFamily="@font/montserrat"
                 android:hint="Additional information"
-                android:inputType="textPersonName"
+                android:inputType="textMultiLine"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -195,6 +195,21 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <EditText
+                android:id="@+id/editProfileMiddlenameField"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Middle name"
+                android:inputType="textPersonName"
+                android:textStyle="italic"
+                app:layout_constraintEnd_toStartOf="@+id/guideline4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editProfileSurnameField" />
+
+            <EditText
                 android:id="@+id/editProfileSurnameField"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -206,24 +221,9 @@
                 android:inputType="textPersonName"
                 android:textStyle="italic"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editProfileNameField" />
-
-            <EditText
-                android:id="@+id/editProfileMiddlenameField"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:ems="10"
-                android:fontFamily="@font/montserrat"
-                android:hint="Middlename"
-                android:inputType="textPersonName"
-                android:textStyle="italic"
-                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editProfileSurnameField" />
+                app:layout_constraintTop_toBottomOf="@+id/editProfileNameField" />
 
             <EditText
                 android:id="@+id/editProfileNameField"
