--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -18,7 +18,8 @@
     <item android:id="@+id/settings" android:title="Settings" android:icon="@drawable/ic_settings"/>
 </group>
 
-    <item android:id="@+id/signIn" android:title="Sign in" android:icon="@drawable/ic_log_in"/>
+    <item android:id="@+id/signIn" android:title="Log in" android:icon="@drawable/ic_log_in"/>
+    <item android:id="@+id/logOut" android:title="Log out" android:icon="@drawable/ic_logout"/>
 
 
 </menu>
