--- a/app/src/main/res/layout/activity_currently_testing.xml
+++ b/app/src/main/res/layout/activity_currently_testing.xml
@@ -12,11 +12,23 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="416dp"
+            android:layout_height="275dp"
+            android:layout_marginTop="8dp"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/MedicsText"
+            app:srcCompat="@drawable/error404" />
+
+        <ImageView
             android:id="@+id/top_panel"
             android:layout_width="match_parent"
             android:layout_height="136dp"
             android:scaleType="fitStart"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_signin_top_panel" />
@@ -49,16 +61,6 @@
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="@+id/MedicsText"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="416dp"
-            android:layout_height="275dp"
-            android:scaleType="fitStart"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/top_panel"
-            app:srcCompat="@drawable/error404" />
 
         <TextView
             android:id="@+id/textView4"
