--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -14,7 +14,7 @@
 
     <TextView
         android:id="@+id/navHeaderName"
-        android:layout_width="130dp"
+        android:layout_width="196dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="25dp"
@@ -25,7 +25,8 @@
         android:textStyle="bold" />
 
     <TextView
-        android:layout_width="157dp"
+        android:id="@+id/navHeaderEmail"
+        android:layout_width="205dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:fontFamily="@font/montserrat"
