--- a/app/src/main/res/layout/activity_currently_testing.xml
+++ b/app/src/main/res/layout/activity_currently_testing.xml
@@ -81,7 +81,7 @@
     </android.support.constraint.ConstraintLayout>
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/navViewList"
+        android:id="@+id/navViewList2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
