--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -45,7 +45,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="4dp"
                 android:ems="10"
                 android:inputType="date"
@@ -162,6 +162,7 @@
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
@@ -248,6 +249,72 @@
                 app:layout_constraintBottom_toBottomOf="@+id/editProfileAvatar"
                 app:layout_constraintEnd_toEndOf="@+id/editProfileAvatar"
                 app:srcCompat="@drawable/ic_plus" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:text="*"
+                android:textColor="#D50E02"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="@+id/editProfileNameField"
+                app:layout_constraintTop_toTopOf="@+id/editProfileNameField" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:text="*"
+                android:textColor="#D50E02"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="@+id/editProfileDateOfBirthField"
+                app:layout_constraintTop_toBottomOf="@+id/editProfileDateOfBirthText" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="8dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:text="*"
+                android:textColor="#D50E02"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="@+id/editProfileSurnameField"
+                app:layout_constraintTop_toBottomOf="@+id/editProfileNameField" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="7dp"
+                android:layout_height="18dp"
+                android:fontFamily="@font/montserrat"
+                android:text="*"
+                android:textColor="#D50E02"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="@+id/editProfilePhoneNumberField"
+                app:layout_constraintTop_toTopOf="@+id/editProfilePhoneNumberField" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="9dp"
+                android:layout_height="16dp"
+                android:fontFamily="@font/montserrat"
+                android:text="*"
+                android:textColor="#D50E02"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="@+id/editProfileExperienceField"
+                app:layout_constraintTop_toTopOf="@+id/editProfileExperienceField" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="9dp"
+                android:layout_height="16dp"
+                android:fontFamily="@font/montserrat"
+                android:text="*"
+                android:textColor="#D50E02"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="@+id/spinner"
+                app:layout_constraintTop_toTopOf="@+id/spinner" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
