--- a/app/src/main/res/layout/activity_edit_profile_client.xml
+++ b/app/src/main/res/layout/activity_edit_profile_client.xml
@@ -50,6 +50,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="4dp"
                     android:ems="10"
+                    android:hint="dd.mm.year"
                     android:inputType="date"
                     android:textStyle="italic"
                     app:layout_constraintBottom_toTopOf="@+id/editProfileContactDetails"
@@ -80,7 +81,7 @@
                     app:layout_constraintBottom_toTopOf="@+id/editClientProfileDateOfBirthField"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editClientProfileSurnameField" />
+                    app:layout_constraintTop_toBottomOf="@+id/editProfileMiddlenameField" />
 
                 <EditText
                     android:id="@+id/editClientProfileAddressField"
@@ -164,16 +165,17 @@
                     android:hint="Surname"
                     android:inputType="textPersonName"
                     android:textStyle="italic"
+                    app:layout_constraintEnd_toEndOf="@+id/textView7"
                     app:layout_constraintEnd_toStartOf="@+id/guideline4"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editProfileMiddlenameField" />
+                    app:layout_constraintTop_toBottomOf="@+id/editClientProfileNameField" />
 
                 <EditText
                     android:id="@+id/editProfileMiddlenameField"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:ems="10"
                     android:fontFamily="@font/montserrat"
@@ -183,7 +185,7 @@
                     app:layout_constraintEnd_toStartOf="@+id/guideline4"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editClientProfileNameField" />
+                    app:layout_constraintTop_toBottomOf="@+id/editClientProfileSurnameField" />
 
                 <EditText
                     android:id="@+id/editClientProfileNameField"
@@ -198,6 +200,7 @@
                     android:inputType="textPersonName"
                     android:textStyle="italic"
                     app:layout_constraintEnd_toStartOf="@+id/guideline4"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/editProfileTopPanel" />
 
@@ -208,6 +211,50 @@
                     app:layout_constraintBottom_toBottomOf="@+id/editProfileAvatar"
                     app:layout_constraintEnd_toEndOf="@+id/editProfileAvatar"
                     app:srcCompat="@drawable/ic_plus" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat"
+                    android:text="*"
+                    android:textColor="#D50E02"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="@+id/editClientProfilePhoneNumberField"
+                    app:layout_constraintTop_toTopOf="@+id/editClientProfilePhoneNumberField" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat"
+                    android:text="*"
+                    android:textColor="#D50E02"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="@+id/editClientProfileSurnameField"
+                    app:layout_constraintTop_toBottomOf="@+id/editClientProfileNameField" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat"
+                    android:text="*"
+                    android:textColor="#D50E02"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="@+id/editClientProfilePhoneNumberField"
+                    app:layout_constraintTop_toTopOf="@+id/editClientProfileDateOfBirthField" />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="7dp"
+                    android:layout_height="18dp"
+                    android:fontFamily="@font/montserrat"
+                    android:text="*"
+                    android:textColor="#D50E02"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="@+id/editClientProfileNameField"
+                    app:layout_constraintTop_toTopOf="@+id/editClientProfileNameField" />
 
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
